# httparse-etna

./: .gitignore  BUGS.md  Cargo.toml  TASKS.md  etna.toml  steps.sh
patches/: backslash_in_uri_1a791f4_1.patch  chunk_size_overflow_34efc1e_1.patch  header_value_htab_59a9fd1_1.patch  invalid_token_delim_498de3f_1.patch  method_leading_space_9f6702b_1.patch  response_no_reason_c0631f2_1.patch
src/: etna.rs  lib.rs
src/simd/: avx2.rs  neon.rs  sse42.rs  swar.rs
tests/: etna_witnesses.rs  locate.rs
