[package]
name = "httparse"
version = "1.10.1"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT OR Apache-2.0"
description = "A tiny, safe, speedy, zero-copy HTTP/1.x parser."
repository = "https://github.com/seanmonstar/httparse"
documentation = "https://docs.rs/httparse"
readme = "README.md"
keywords = ["http", "parser", "no_std"]
categories = ["network-programming", "no-std", "parser-implementations", "web-programming"]
edition = "2021"
rust-version = "1.59"

[features]
default = ["std"]
std = []

[dependencies]
# ETNA framework dependencies — linked by src/bin/etna.rs.
proptest = "1.11.0"
# The forked quickcheck with the `etna` feature is required by the runner.
quickcheck_etna = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", package = "quickcheck", features = ["etna"] }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest = "0.3.7"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
serde_json = "1.0"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[[bin]]
name = "etna"
path = "src/bin/etna.rs"

[[bin]]
name = "etna-faultloc"
path = "src/bin/etna-faultloc.rs"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
debug = true

[profile.test]
opt-level = 3
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(httparse_disable_simd)',
] }
